--- a/lab/model_developmen_colab.ipynb
+++ b/lab/model_developmen_colab.ipynb
@@ -31,7 +31,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q nltk scikit-learn tensorflow numpy==1.26.4 wandb==0.16.6 huggingface_hub"
+        "!pip install -q gdown matplotlib seaborn nltk scikit-learn tensorflow numpy==1.26.4 wandb==0.16.6 huggingface_hub"
       ]
     },
     {
@@ -118,6 +118,7 @@
         "\n",
         "# Read dataset\n",
         "data_path = \"/content/data/HateSpeechDatasetBalanced.csv\"\n",
+        "\n",
         "data = pd.read_csv(data_path)\n",
         "\n",
         "print(\"✅ First 5 rows of the dataset:\")\n",
@@ -1896,7 +1897,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "hatespeechclassiferAPI",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
