--- a/lab/model_developmen_colab.ipynb
+++ b/lab/model_developmen_colab.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Hate Speech Classifier Model developemnt Lab\n",
         "\n",
-        " Lab is to train **Hate-speech-classifier** model using [dataset](https://drive.google.com/file/d/1_XsweOGUzjYDbQqibSvI8M3X1hvycd8F/view?usp=drive_link)"
+        "**Hate-speech-classifier** model is trained with this  [dataset](https://drive.google.com/file/d/1_XsweOGUzjYDbQqibSvI8M3X1hvycd8F/view?usp=drive_link)"
       ]
     },
     {
@@ -24,12 +24,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "rzT0yuZRTeT9",
       "metadata": {
         "id": "rzT0yuZRTeT9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "^C\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install -q gdown matplotlib seaborn nltk scikit-learn tensorflow numpy==1.26.4 wandb==0.16.6 huggingface_hub"
       ]
@@ -1819,15 +1827,14 @@
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "import json, re\n",
         "\n",
-        "# 🔹 Replace with your actual repo id\n",
         "repo_id = \"diyorarti/hate-speech-attn-bigru-keras\"\n",
         "\n",
-        "# 1️⃣ Download model and tokenizer files from the Hub\n",
+        "# 1 Download model and tokenizer files from the Hub\n",
         "model_path = hf_hub_download(repo_id=repo_id, filename=\"model.keras\")\n",
         "tokenizer_path = hf_hub_download(repo_id=repo_id, filename=\"tokenizer.json\")\n",
         "config_path = hf_hub_download(repo_id=repo_id, filename=\"tokenizer_config.json\")\n",
         "\n",
-        "# 2️⃣ Define your custom layer (must match training)\n",
+        "# 2️ custom layer \n",
         "from tensorflow.keras import layers\n",
         "\n",
         "class AttentionPooling1D(layers.Layer):\n",
@@ -1848,7 +1855,7 @@
         "        cfg.update({\"units\": 128})\n",
         "        return cfg\n",
         "\n",
-        "# 3️⃣ Load model and tokenizer\n",
+        "# 3️ Load model and tokenizer\n",
         "model = load_model(model_path, custom_objects={\"AttentionPooling1D\": AttentionPooling1D})\n",
         "\n",
         "with open(tokenizer_path, \"r\", encoding=\"utf-8\") as f:\n",
@@ -1858,7 +1865,7 @@
         "    cfg = json.load(f)\n",
         "MAX_LEN = int(cfg[\"max_len\"])\n",
         "\n",
-        "# 4️⃣ Define preprocessing\n",
+        "# 4️ Define preprocessing\n",
         "def clean_text(text):\n",
         "    text = text.lower()\n",
         "    text = re.sub(r\"https?://\\S+|www\\.\\S+\", \" \", text)\n",
@@ -1873,7 +1880,7 @@
         "    label = \"hate\" if prob < 0.5 else \"not hate\"\n",
         "    return {\"text\": text, \"cleaned\": clean, \"probability\": float(prob), \"label\": label}\n",
         "\n",
-        "# 5️⃣ Test\n",
+        "# 5️ Test\n",
         "print(predict_text(\"I hate you so much\"))\n",
         "print(predict_text(\"You are a wonderful human being\"))\n"
       ]
